feat: migrations, session controller
