# src/entity/Session.ts
@@ -1,26 +1,16 @@
 import {
   BaseEntity,
-  Column,
   CreateDateColumn,
   Entity,
   PrimaryGeneratedColumn,
   UpdateDateColumn,
-} from "typeorm"
-import { AsJson } from "../common"
+} from 'typeorm'
+import { AsJson } from '../common'
 
-@Entity({ name: "users" })
-export class User extends BaseEntity implements AsJson {
+@Entity({ name: 'sessions' })
+export class Session extends BaseEntity implements AsJson {
   @PrimaryGeneratedColumn('uuid')
   id: string
-
-  @Column()
-  username: string
-
-  @Column()
-  password: string
-
-  @Column()
-  avatar?: string
 
   @CreateDateColumn()
   createdAt: Date
@@ -31,8 +21,6 @@ export class User extends BaseEntity implements AsJson {
   toJson(): any {
     return {
       id: this.id,
-      name: this.username,
-      avatar: this.avatar,
       createdAt: this.createdAt?.toISOString(),
       updatedAt: this.updatedAt?.toISOString(),
     }
